2.1.15
====================
* Added creation and modification time to Course model.

2.1.14 (2017-05-31)
====================
* More updates for Django 1.11

2.1.13 (2017-05-08)
====================
* updates for Django 1.11
* add courses_for_instructor utility method and templatetag
* get_courses adds a sort order

2.1.12 (2016-11-02)
====================
* Added Affil.get_course()
* On set_course request, verify specified course is valid

2.1.11 (2016-08-31)
====================
* Fixed a bug in CourseAdminForm.clean()
* Added Affil.is_faculty

2.1.10 (2016-08-18)
====================
* Display each Affil's user in the admin section.

2.1.9 (2016-08-09)
====================
* Allow Sandbox courses to be queried for in CourseListView.

2.1.8 (2016-05-20)
====================
* Added Affil admin control

2.1.7 (2016-05-11)
====================
* Added Affil.shortname

2.1.6 (2016-05-11)
====================
* Added Affil.past_present_future

2.1.5 (2016-05-02)
====================
* Introduced the Affil model for storing affils from CAS that don't yet
  have an associated Course.
* Changed CourseManagerMiddleware so faculty always see the switch course
  view, and are never automatically forwarded into a course.

2.1.4 (2016-04-25)
====================
* Allow CourseListView to be overridden in CourseManagerMiddleware.

2.1.3 (2016-04-14)
====================
* optimize CourseListView rendering

2.1.2 (2016-04-13)
====================
* columbia.CourseStringMapper now has to_dict and to_string methods.

2.1.1
=====
* Added the faculty_courses_for_user function.
* Added a basic course creation form and view.

2.1.0
=====
* Fixed a bug where get_current_term() wasn't accurate for some dates.
* Fixed an error that occured when a Course has no faculty_group.

2.0.9
=====
* Fixed bug where all sandbox courses were displaying for non-staff users.

2.0.8
=====
* Added next_redirect to CourseListView

2.0.7
=====