@@ -1,6 +1,8 @@
 2.1.15
 ====================
 * Added creation and modification time to Course model.
+* Add more detailed error on course creation with an already
+  associated group.
 
 2.1.14 (2017-05-31)
 ====================
